Make e & m optional args in getBEMClassName util function. Fix CSS bug to ensure tab count isn't visible when none of the corresponding columns are selected.

--- a/src/results/styles/ColumnSelect.scss
+++ b/src/results/styles/ColumnSelect.scss
@@ -1,12 +1,17 @@
 .column-select {
   margin: 1rem 0;
-  &__tab__title {
-    margin-left: 0.5rem;
-    &--visible {
-      display: visible;
+  &__tab-title {
+    &:first-letter {
+      text-transform: capitalize;
     }
-    &--hidden {
-      display: hidden;
+    &__count {
+      margin-left: 0.5rem;
+      &--visible {
+        visibility: visible;
+      }
+      &--hidden {
+        visibility: hidden;
+      }
     }
   }
 }
